feat: add layout and routing for content management
- Implemented routing for adding content and viewing scheduled reviews.
- Created AddContentComponent for adding new content with form handling.
- Developed RevisoesHojeComponent to display scheduled reviews for today.
- Added SidebarComponent for navigation with review count display.
- Introduced LayoutComponent to structure the application layout.
- Styled components with Tailwind CSS and added global styles.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+# .env
+.env
+
 # Compiled output
 /dist
 /tmp
@@ -8,8 +11,14 @@
 
 # Node
 /node_modules
+server/node_modules
 npm-debug.log
 yarn-error.log
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
 # IDEs and editors
 .idea/
