refactor: update Docker and docker-compose configurations for improved development setup

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,51 @@
+# Dependencies
 node_modules
-npm-debug.log
+npm-debug.log*
+
+# Build outputs
+dist
+.angular
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.vscode
+.idea
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Git
 .git
 .gitignore
 README.md
-.env
-.angular
-dist
-.DS_Store
+
+# Docker
+Dockerfile
+.dockerignore
+docker-compose*.yml
+
+# Logs
+logs
 *.log
+
+# Coverage directory
+coverage
+
+# Testing
 e2e
 src/**/*.spec.ts
 karma.conf.js
 protractor.conf.js
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
