--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,22 @@ services:
     ports:
       - "3000:3000"
     volumes:
+      - ./server:/app
+      - /app/node_modules
       - ./server/data:/app/data
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
+    restart: unless-stopped
 
   frontend:
     build: .
     ports:
-      - "80:80"
+      - "4200:4200"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
     depends_on:
       - backend
+    restart: unless-stopped
