--- a/server/.dockerignore
+++ b/server/.dockerignore
@@ -1,10 +1,45 @@
+# Dependencies
 node_modules
-npm-debug.log
+npm-debug.log*
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.vscode
+.idea
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Git
 .git
 .gitignore
 README.md
-.env
+
+# Docker
+Dockerfile
+.dockerignore
+
+# Logs
+logs
+*.log
+
+# Coverage
 .nyc_output
 coverage
-.DS_Store
-*.log
+
+# Database (will be mounted as volume)
+contents.db
+data/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
